Make AbstractCardMenu so we can build card game screens that synchronize everything between server and client. Implemented dummy CardMenu for CrazyEightsGame. You can almost play a match against the Auto Players. Just some game bugs to squash.

--- a/src/main/templates/META-INF/accesstransformer.cfg
+++ b/src/main/templates/META-INF/accesstransformer.cfg
@@ -1,1 +1,5 @@
 public net.minecraft.client.gui.components.AbstractWidget isHovered # isHovered
+public net.minecraft.world.inventory.AbstractContainerMenu stateId # stateId
+public net.minecraft.world.inventory.AbstractContainerMenu synchronizer # synchronizer
+public net.minecraft.world.inventory.AbstractContainerMenu suppressRemoteUpdates # suppressRemoteUpdates
+public net.minecraft.world.inventory.AbstractContainerMenu containerListeners # containerListeners
