Set version to alpha

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ loader_version_range=[4,)
 mod_id=charta
 mod_name=Charta
 mod_license=Mozilla Public License 2.0
-mod_version=0.1-BETA
+mod_version=0.1-ALPHA
 mod_group_id=dev.lucaargolo.charta
 mod_authors=D4rkness_King
 mod_description=An extensive card mod for Minecraft.
