--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ neoForge {
         minecraftVersion = project.parchment_minecraft_version
     }
 
-    accessTransformers = project.files('src/main/templates/META-INF/accesstransformer.cfg')
+    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')
 
     runs {
         client {
@@ -137,6 +137,8 @@ tasks.withType(Jar).configureEach {
     manifest {
         attributes["Main-Class"] = "dev.lucaargolo.charta.editor.CardEditor"
     }
+    exclude("cards/**")
+    exclude("decks/**")
 }
 
 idea {
