Added Suit Images so we can have custom suited cards :)

--- a/build.gradle
+++ b/build.gradle
@@ -139,6 +139,7 @@ tasks.withType(Jar).configureEach {
     }
     exclude("cards/**")
     exclude("decks/**")
+    exclude("suits/**")
 }
 
 idea {
