Make blocks properly rotate and mirror. Add structure to plains village.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -10,3 +10,6 @@ public net.minecraft.client.model.geom.ModelPart$Cube polygons # polygons
 public net.minecraft.client.model.geom.ModelPart$Polygon
 public net.minecraft.client.model.geom.ModelPart$Vertex
 public net.minecraft.client.renderer.entity.LeashKnotRenderer model # model
+public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool rawTemplates
+public net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool templates
+
