Improved fun game :)

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -12,4 +12,5 @@ public net.minecraft.client.model.geom.ModelPart$Vertex
 public net.minecraft.client.renderer.entity.LeashKnotRenderer model # model
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool rawTemplates
 public net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool templates
+public net.minecraft.client.renderer.GameRenderer renderItemActivationAnimation(Lnet/minecraft/client/gui/GuiGraphics;F)V # renderItemActivationAnimation
 
