Allow players to change certain game options. Improve some buttons by using Material Design icons. Add NOTICE and LICENSE.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,4 +13,10 @@ public net.minecraft.client.renderer.entity.LeashKnotRenderer model # model
 public-f net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool rawTemplates
 public net.minecraft.world.level.levelgen.structure.pools.StructureTemplatePool templates
 public net.minecraft.client.renderer.GameRenderer renderItemActivationAnimation(Lnet/minecraft/client/gui/GuiGraphics;F)V # renderItemActivationAnimation
-
+public net.minecraft.client.gui.components.AbstractSliderButton setValue(D)V # setValue
+public net.minecraft.client.gui.screens.ChatScreen input
+public net.minecraft.client.gui.components.Tooltip <init>(Lnet/minecraft/network/chat/Component;Lnet/minecraft/network/chat/Component;)V # init
+public net.minecraft.client.gui.components.Tooltip message
+public net.minecraft.client.gui.components.Tooltip cachedTooltip
+public net.minecraft.client.gui.components.Tooltip splitWithLanguage
+public net.minecraft.client.gui.components.Tooltip narration
