--- a/build.gradle
+++ b/build.gradle
@@ -141,6 +141,7 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 tasks.withType(Jar).configureEach {
+    archiveClassifier = "neoforge"
     manifest {
         attributes["Main-Class"] = "dev.lucaargolo.charta.editor.CardEditor"
     }
