--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.caching=true
-org.gradle.configuration-cache=true
+org.gradle.daemon=false
+org.gradle.parallel=false
+org.gradle.caching=false
+org.gradle.configuration-cache=false
 
-parchment_minecraft_version=1.21
-parchment_mappings_version=2024.07.28
-minecraft_version=1.21.1
-minecraft_version_range=[1.21.1, 1.22)
-neo_version=21.1.138
-neo_version_range=[21.1.0,)
-loader_version_range=[4,)
+parchment_minecraft_version=1.20.1
+parchment_mappings_version=2023.09.03
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1,1.21)
+forge_version=47.2.19
+forge_version_range=[47,)
+loader_version_range=[47,)
 
 mod_id=charta
 mod_name=Charta
