It loads in game :D

--- a/src/main/resources/assets/charta/shaders/core/rendertype_iron_leash.json
+++ b/src/main/resources/assets/charta/shaders/core/rendertype_iron_leash.json
@@ -1,6 +1,16 @@
 {
+    "blend": {
+        "func": "add",
+        "srcrgb": "srcalpha",
+        "dstrgb": "1-srcalpha"
+    },
     "vertex": "charta:rendertype_iron_leash",
     "fragment": "charta:rendertype_iron_leash",
+    "attributes": [
+        "Position",
+        "Color",
+        "UV2"
+    ],
     "samplers": [
         { "name": "Sampler2" }
     ],
