--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,8 @@ dependencies {
         jarJar.ranged(it, "[0.24.0,)")
     }
     minecraftLibrary "org.commonmark:commonmark:0.24.0"
+
+    annotationProcessor 'org.spongepowered:mixin:0.8.7:processor'
 }
 
 tasks.named('processResources', ProcessResources).configure {
@@ -119,7 +121,9 @@ tasks.named('processResources', ProcessResources).configure {
     }
 }
 
-tasks.named('jar', Jar).configure {
+tasks.named('jarJar', Jar).configure {
+    archiveClassifier = "forge-"+minecraft_version+"-all"
+
     manifest {
         attributes([
                 "Specification-Title"     : mod_id,
@@ -132,7 +136,27 @@ tasks.named('jar', Jar).configure {
                 "Main-Class"              : "dev.lucaargolo.charta.editor.CardEditor"
         ])
     }
+
+    exclude("cards/**")
+    exclude("decks/**")
+    exclude("suits/**")
+}
+
+tasks.named('jar', Jar).configure {
     archiveClassifier = "forge-"+minecraft_version
+
+    manifest {
+        attributes([
+                "Specification-Title"     : mod_id,
+                "Specification-Vendor"    : mod_authors,
+                "Specification-Version"   : "1", // We are version 1 of ourselves
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : project.jar.archiveVersion,
+                "Implementation-Vendor"   : mod_authors,
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "Main-Class"              : "dev.lucaargolo.charta.editor.CardEditor"
+        ])
+    }
 
     exclude("cards/**")
     exclude("decks/**")
