--- a/build.gradle
+++ b/build.gradle
@@ -146,6 +146,15 @@ tasks.withType(Jar).configureEach {
     exclude("suits/**")
 }
 
+task sourcesJar(type: Jar) {
+    archiveClassifier.set('sources')
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
+
 idea {
     module {
         downloadSources = true
