--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@ mod_id=charta
 mod_name=Charta
 mod_license=Mozilla Public License 2.0
 mod_version=1.2.0
-mod_group_id=dev.lucaargolo.charta
+mod_group_id=dev.lucaargolo
 mod_authors=D4rkness_King
 mod_description=An extensive card mod for Minecraft.
