--- a/common/src/main/resources/META-INF/accesstransformer.cfg
+++ b/common/src/main/resources/META-INF/accesstransformer.cfg
@@ -21,3 +21,8 @@ public net.minecraft.client.gui.components.Tooltip cachedTooltip
 public net.minecraft.client.gui.components.Tooltip splitWithLanguage
 public net.minecraft.client.gui.components.Tooltip narration
 public net.minecraft.client.gui.screens.Screen renderables
+public-f net.minecraft.client.gui.components.AbstractSliderButton getSprite()Lnet/minecraft/resources/ResourceLocation;
+public-f net.minecraft.client.gui.components.AbstractSliderButton getHandleSprite()Lnet/minecraft/resources/ResourceLocation;
+public net.minecraft.client.renderer.entity.ItemRenderer renderQuadList(Lcom/mojang/blaze3d/vertex/PoseStack;Lcom/mojang/blaze3d/vertex/VertexConsumer;Ljava/util/List;Lnet/minecraft/world/item/ItemStack;II)V
+public net.minecraft.client.KeyMapping key
+public net.minecraft.client.gui.components.AbstractWidget renderScrollingString(Lnet/minecraft/client/gui/GuiGraphics;Lnet/minecraft/client/gui/Font;Lnet/minecraft/network/chat/Component;IIIII)V
