--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     modCompileOnly("me.shedaniel:RoughlyEnoughItems-api-fabric:$rei_version")
     modRuntimeOnly("me.shedaniel:RoughlyEnoughItems-fabric:$rei_version")
 
+    implementation "org.commonmark:commonmark:0.24.0"
     include "org.commonmark:commonmark:0.24.0"
 }
 
