--- a/buildSrc/src/main/groovy/multiloader-common.gradle
+++ b/buildSrc/src/main/groovy/multiloader-common.gradle
@@ -109,7 +109,11 @@ publishing {
     }
     repositories {
         maven {
-            url System.getenv('local_maven_url')
+            url = uri("https://maven.cafeteria.dev/releases")
+            credentials {
+                username = System.getenv("MAVEN_USERNAME")
+                password = System.getenv("MAVEN_PASSWORD")
+            }
         }
     }
 }
